<resources>
    <!-- Common Strings -->
    <string name="app_name">Volumize</string>
    <string name="common_ring_tone">Ring Tone</string>
    <string name="common_media_volume">Media Volume</string>
    <string name="common_notifications">Notifications</string>
    <string name="common_system_volume">System Volume</string>
    <string name="common_volumes">Volumes</string>
    <string name="common_volume">Volume</string>
    <string name="common_schedule">Schedule</string>
    <string name="common_profiles">Profiles</string>
    <string name="common_settings">Settings</string>
    <string name="common_about">About</string>
    <string name="common_delete_title">Delete?</string>
    <string name="common_error">A general error occurred</string>
    <string name="common_delete">Delete</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_discard">Discard</string>
    <string name="common_keep_editing">Keep Editing</string>
    <string name="app_icon">App icon</string>
    <string name="volume_placeholder">%d</string>

    <string name="menu_edit_save">Save</string>

    <!-- Edit volume -->
    <string name="edit_schedule_title">Edit Volume Event</string>
    <string name="schedule_emptystate">There are currently no scheduled volume settings</string>
    <string name="repeat_weekly">Repeat Weekly</string>
    <string name="time">Time</string>
    <string name="type">Type</string>
    <string name="vibrate">Vibrate</string>
    <string name="mute">Mute</string>
    <string name="edit_schedule_confirm_cancel_subtitle">Discard Changes</string>
    <string name="confirm_cancel_subtitle">Discard Changes?</string>

    <!-- Schedule -->
    <string name="time_picker">Choose event time</string>
    <string name="all">All</string>
    <string name="media">Media</string>
    <string name="system">System</string>

    <!-- Profile -->
    <string name="profile_empty_state">There are currently no profiles</string>
    <!-- EditProfile -->
    <string name="edit_profile">Edit Profile</string>

    <!-- Settings Page -->
    <string name="todays_first">Today\'s First</string>
    <string name="weekly_time">Weekly Time</string>
    <string name="time_of_day">Time of Day</string>
    <string name="creation_date">Creation Date</string>
    <string name="type_of_event">Type of Event</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="todays_first_value">todaysfirst</string>
    <string name="weekly_time_value">weeklytime</string>
    <string name="time_of_day_value">timeofday</string>
    <string name="creation_date_value">creationdate</string>
    <string name="type_of_event_value">typeofevent</string>
    <string name="ascending_value">ascending</string>
    <string name="descending_value">descending</string>

    <!-- About Page -->
    <string name="version_number">Version %d</string>
    <string name="thank_you">Thank you for using Volumize!</string>
    <string name="homepage">Homepage</string>
    <string name="feature_request">Feature Requests</string>
    <string name="recognitions">Recognitions</string>
    <string name="rate_app">Rate App</string>
    <string name="feedback">Feedback</string>
    <string name="sunday_short">Su</string>
    <string name="monday_short">M</string>
    <string name="tuesday_short">Tu</string>
    <string name="wednesday_short">W</string>
    <string name="thursday_short">Th</string>
    <string name="friday_short">F</string>
    <string name="saturday_short">Sa</string>
    <string name="volume_d">Volume %d</string>
    <string name="restore_volume">Restore Volume</string>
    <string name="restore_volume_dialog_subtitle">When would you like to restore your volume?</string>
    <string name="do_not_restore">Do not restore</string>
    <string name="restore">Restore</string>
    <string name="delete">Delete</string>
    <string name="how_long_until_your_volume_is_restored">How long until your volume is restored?</string>
</resources>
