<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:icon="@mipmap/ic_launcher"
        android:enabled="false"
        android:layout="@layout/pref_icon"/>

    <Preference
        android:key="version"
        android:title="@string/version_number" />

    <Preference
        android:key="rate_app"
        android:title="@string/rate_app" />

    <Preference
        android:key="homepage"
        android:title="@string/homepage" />

    <Preference
        android:key="feature_request"
        android:title="@string/feature_request" />

    <Preference
        android:key="feedback"
        android:title="@string/feedback" />

    <Preference
        android:key="pref_recognitions"
        android:title="@string/recognitions" />

</PreferenceScreen>